--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-grid-layout": "^0.17.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-virtualized-tree": "^2.0.0-beta2"
+    "react-virtualized-tree": "^2.0.0-beta2",
+    "yarn": "^1.22.0"
   },
   "scripts": {
     "start": "react-scripts start",
