--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-data-table-component": "^6.3.1",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.7.0",
     "react-grid-layout": "^0.17.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
