--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "material-ui-image": "^3.2.2",
     "react": "^16.12.0",
     "react-data-table-component": "^6.3.1",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.17.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-virtualized-tree": "^2.0.0-beta2",
     "styled-components": "^5.0.1",
     "yarn": "^1.22.0"
