--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-virtualized-tree": "^2.0.0-beta2",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^5.0.1",
     "yarn": "^1.22.0"
   },
