--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "antd": "^3.26.7",
     "aws-amplify": "^3.0.13",
+    "core-js": "^3.6.5",
     "material-table": "^1.57.2",
     "material-ui-image": "^3.2.2",
     "react": "^16.12.0",
