--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "antd": "^3.26.7",
     "aws-amplify": "^3.0.13",
+    "aws-sdk": "^2.705.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "material-table": "^1.57.2",
     "material-ui-image": "^3.2.2",
     "react": "^16.12.0",
